[package]
name = "raytrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum ={ version = "0.6.15", features = ["macros", "ws"]}
futures = "0.3.28"
rand = "0.8"
rayon = "*"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
